Persisting Data using Core Data.

--- a/ListMaker/Views /Base.lproj/Main.storyboard
+++ b/ListMaker/Views /Base.lproj/Main.storyboard
@@ -9,7 +9,46 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Make Your List-->
+        <!--ListMaker -->
+        <scene sceneID="zBU-3K-IkZ">
+            <objects>
+                <tableViewController id="2Cj-rS-V87" customClass="CategoryViewController" customModule="ListMaker" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="W5A-d9-3p8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="aAY-dr-jZp">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aAY-dr-jZp" id="lrK-EK-z6i">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="2Cj-rS-V87" id="e68-AY-fTG"/>
+                            <outlet property="delegate" destination="2Cj-rS-V87" id="IXE-Dj-AxJ"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="ListMaker " id="XIm-lG-CJB">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="QEt-yp-ySy">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="2Cj-rS-V87" id="apC-sd-VXc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="RMs-gI-Yl3" kind="show" identifier="goToItems" id="KaJ-YV-5BU"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vF0-P6-Ojj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1361" y="119"/>
+        </scene>
+        <!--Items-->
         <scene sceneID="MnP-Tk-EYG">
             <objects>
                 <tableViewController id="RMs-gI-Yl3" customClass="TodoListViewController" customModule="ListMaker" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,9 +56,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="bRl-s1-kAU">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="RMs-gI-Yl3" id="CAe-wQ-OsM"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoitemCell" id="ckf-RN-wGP">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ckf-RN-wGP" id="rIf-4f-frB">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -32,7 +79,7 @@
                             <outlet property="delegate" destination="RMs-gI-Yl3" id="gyO-u7-sxu"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Make Your List" id="QNc-D6-mGV">
+                    <navigationItem key="navigationItem" title="Items" id="QNc-D6-mGV">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="WRZ-LO-kll">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -43,24 +90,24 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AYg-TT-KHo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1420" y="119.1904047976012"/>
+            <point key="canvasLocation" x="2194" y="119"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dBb-0P-mYg">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="H0d-LA-0bo" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Esx-QO-0fO">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="Esx-QO-0fO">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.92549019610000005" green="0.72941176470000002" blue="0.062745098040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="RMs-gI-Yl3" kind="relationship" relationship="rootViewController" id="9dR-T6-w8h"/>
+                        <segue destination="2Cj-rS-V87" kind="relationship" relationship="rootViewController" id="U2t-E8-4d0"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Y7-cf-9FB" userLabel="First Responder" sceneMemberID="firstResponder"/>
